--- a/Gopnik's Adventure/Storyboards/LevelFour.storyboard
+++ b/Gopnik's Adventure/Storyboards/LevelFour.storyboard
@@ -529,6 +529,16 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="imb-wp-tpz">
+                                        <rect key="frame" x="410" y="721" width="38" height="39"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o5k-bG-ea5">
+                                        <rect key="frame" x="423" y="758" width="12" height="12"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <gestureRecognizers/>
@@ -707,9 +717,11 @@
                         <outlet property="bouncyBot3Image" destination="d2T-xd-lAA" id="snU-gy-WzH"/>
                         <outlet property="bullet1Image" destination="PMQ-eO-oFa" id="Knu-ob-0SH"/>
                         <outlet property="characterImage" destination="ExV-ig-pWV" id="SOs-8m-go9"/>
+                        <outlet property="fireballImage" destination="o5k-bG-ea5" id="KZV-Y0-ycU"/>
                         <outlet property="leftWallImage" destination="7FK-ez-Ko6" id="m5v-9o-azD"/>
                         <outlet property="rightWallImage" destination="TwL-1I-nrx" id="VAx-ox-2aI"/>
                         <outlet property="topWallImage" destination="n86-vE-DB0" id="9fb-e3-k1c"/>
+                        <outlet property="turretImage" destination="imb-wp-tpz" id="hL7-IP-fUj"/>
                         <outlet property="upButton" destination="wet-VA-7aV" id="FVs-eT-pZ7"/>
                     </connections>
                 </viewController>
