--- a/Gopnik's Adventure/Storyboards/LevelFour.storyboard
+++ b/Gopnik's Adventure/Storyboards/LevelFour.storyboard
@@ -12,15 +12,15 @@
             <objects>
                 <viewController storyboardIdentifier="LevelFourController" id="iLd-7K-uuA" customClass="LevelFourController" customModule="Gopnik_s_Adventure" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="UEf-iF-cHe">
-                        <rect key="frame" x="0.0" y="0.0" width="2000" height="4000"/>
+                        <rect key="frame" x="0.0" y="0.0" width="2000" height="5000"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SEt-RR-IjS" customClass="MyScrollView" customModule="Gopnik_s_Adventure" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="2000" height="4400"/>
+                                <rect key="frame" x="0.0" y="0.0" width="2000" height="5400"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="level4background.png" translatesAutoresizingMaskIntoConstraints="NO" id="ukU-9f-xMp">
-                                        <rect key="frame" x="0.0" y="200" width="2000" height="4000"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="2000" height="5000"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CBs-ef-RyZ">
@@ -354,7 +354,7 @@
                                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8l6-7V-amP">
-                                        <rect key="frame" x="0.0" y="3992" width="2000" height="8"/>
+                                        <rect key="frame" x="0.0" y="4992" width="2000" height="8"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                     </imageView>
@@ -364,12 +364,12 @@
                                         <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TwL-1I-nrx">
-                                        <rect key="frame" x="1993" y="0.0" width="7" height="4000"/>
+                                        <rect key="frame" x="1993" y="0.0" width="7" height="5000"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7FK-ez-Ko6">
-                                        <rect key="frame" x="0.0" y="0.0" width="7" height="4000"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="7" height="5000"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                     </imageView>
@@ -430,15 +430,9 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </imageView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="imb-wp-tpz">
-                                        <rect key="frame" x="667" y="2277" width="38" height="39"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="turret.png" translatesAutoresizingMaskIntoConstraints="NO" id="imb-wp-tpz">
+                                        <rect key="frame" x="950" y="1509" width="100" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </imageView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o5k-bG-ea5">
-                                        <rect key="frame" x="680" y="2314" width="12" height="12"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NLx-gg-4Yh">
                                         <rect key="frame" x="170" y="1021" width="1822" height="8"/>
@@ -471,6 +465,10 @@
                                         <rect key="frame" x="964" y="3834" width="107" height="150"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="fireball.png" translatesAutoresizingMaskIntoConstraints="NO" id="o5k-bG-ea5">
+                                        <rect key="frame" x="980" y="1608" width="40" height="40"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
                                 </subviews>
                                 <gestureRecognizers/>
@@ -546,7 +544,7 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="9Oz-rv-jRC"/>
                     </view>
-                    <size key="freeformSize" width="2000" height="4000"/>
+                    <size key="freeformSize" width="2000" height="5000"/>
                     <connections>
                         <outlet property="I10BottomImage" destination="fCJ-D9-YtB" id="RsU-6I-tOC"/>
                         <outlet property="I10LeftImage" destination="gws-6s-m9d" id="hDu-80-Hg3"/>
@@ -672,8 +670,10 @@
     </scenes>
     <resources>
         <image name="bouncyBotLookingRight.png" width="432" height="576"/>
+        <image name="fireball.png" width="115.19999694824219" height="115.19999694824219"/>
         <image name="ghostLookingRight.png" width="240" height="208.5"/>
         <image name="level4background.png" width="5760" height="11520"/>
         <image name="mainCharShootingRight.png" width="321" height="450"/>
+        <image name="turret.png" width="288" height="288"/>
     </resources>
 </document>
